[package]
name = "supamdx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dashmap = "6.1.0"
log = "0.4.22"
markdown = "1.0.0-alpha.20"
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
tower-lsp = "0.20.0"

[dev-dependencies]
ctor = "0.2.8"
env_logger = "0.11.5"
tempfile = "3.12.0"
