[package]
name = "supamdx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dashmap = "6.1.0"
env_logger = "0.11.5"
log = "0.4.22"
markdown = "1.0.0-alpha.20"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
toml = "0.8.19"
tower-lsp = "0.20.0"

[dev-dependencies]
tempfile = "3.12.0"
